--- a/app.css
+++ b/app.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: Poppins;
-  background: #2b2e4a;
+  background: #E63B2E;
   color: white;
 }
 
@@ -21,6 +21,10 @@ body {
   font-size: 30px;
 
 }
+.options {
+  display: flex;
+  justify-content: center;
+}
 
 .btns button {
   /* padding: 20px; */
@@ -30,12 +34,26 @@ body {
   border: 1px solid white;
   border-radius: 5px;
   padding: 10px 40px;
-  margin-right: 35px;
+  margin-right: 30px;
 }
 
 .btns button:hover {
   cursor: pointer;
   background: white;
-  color: #222831;
+  color: #E63B2E;
   transition: all 0.25s ease-in;
+}
+
+@media (max-width: 768px) {
+  .options {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+  .btns button {
+    font-size: 22px;
+    margin-bottom: 5%;
+    min-width: 50%;
+    padding: 15px 20px;
+  }
 }
