--- a/app.css
+++ b/app.css
@@ -4,6 +4,7 @@ body {
   font-family: Poppins;
   background: #E63B2E;
   color: white;
+  text-align: center;
 }
 
 .container {
@@ -12,15 +13,10 @@ body {
   text-transform: uppercase;
 }
 
-
 .container ul {
   list-style: none;
 }
 
-.stopwatch {
-  font-size: 30px;
-
-}
 .options {
   display: flex;
   justify-content: center;
@@ -51,7 +47,7 @@ body {
   justify-content: center;
 }
   .btns button {
-    font-size: 22px;
+    font-size: 18px;
     margin-bottom: 5%;
     min-width: 50%;
     padding: 15px 20px;
